<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay"
            android:fitsSystemWindows="true"
            android:clipToPadding="false"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onGoogleCardsExampleClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:scaleType="center"
                android:src="@drawable/img_main_googlecards"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_transparent"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CommonBottomTextStyle"
                    android:text="@string/googlecards"/>

            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginTop="2dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onItemManipulationClicked">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:scaleType="center"
                    android:src="@drawable/img_main_itemmanipulation"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red_transparent"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CommonBottomTextStyle"
                        android:text="@string/itemmanipulation"/>
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onAppearanceClicked">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:scaleType="center"
                    android:src="@drawable/img_main_appearance"/>
                
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_transparent"
                    android:padding="12dp">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CommonBottomTextStyle"
                        android:text="@string/appearance"/>
                    
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onGridViewExampleClicked">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:scaleType="center"
                    android:src="@drawable/img_main_gridview"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_transparent"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CommonBottomTextStyle"
                        android:text="@string/gridview"/>

                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onSLHClicked">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:scaleType="center"
                    android:src="@drawable/img_main_stickylistheaders"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_transparent"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CommonBottomTextStyle"
                        android:text="@string/stickylistheaders"/>

                </FrameLayout>
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>
</ScrollView>